--- a/paints/paints.html
+++ b/paints/paints.html
@@ -67,10 +67,11 @@
     <span class="paint-id">66bfcd890d8502f0629f9bc8</span>
 </span>
 </body>
-
 <style>
     .color-example {
         color: rgba(255, 100, 100, 1.000);
+        /*background-color: currentColor;*/
+        /*-webkit-text-fill-color: transparent;*/
     }
 
     .linear-gradient-example {
@@ -78,14 +79,18 @@
         background-image: linear-gradient(45deg, rgb(210, 210, 210) 10%, rgb(210, 210, 210) 20%, rgb(255, 100, 100) 20%, rgb(255, 100, 100) 30%);;
         background-size: 100% 100%;
         background-clip: text;
+        background-color: currentColor;
+        -webkit-text-fill-color: transparent;
     }
 
 
     .repeating-linear-gradient-example {
-        color: rgba(255, 100, 100, 0.000);
+        color: rgba(255, 100, 100, 1.000);
         background-image: repeating-linear-gradient(45deg, rgb(210, 210, 210) 10%, rgb(210, 210, 210) 20%, rgb(255, 100, 100) 20%, rgb(255, 100, 100) 30%);;
         background-size: 100% 100%;
         background-clip: text;
+        background-color: currentColor;
+        -webkit-text-fill-color: transparent;
     }
 
     .radial-gradient-example {
@@ -93,6 +98,8 @@
         background-image: radial-gradient(ellipse, rgb(255, 211, 92) 72%, rgb(255, 136, 0) 87%, rgb(245, 122, 41) 88%, rgb(249, 218, 134) 95%);
         background-size: 100% 100%;
         background-clip: text;
+        background-color: currentColor;
+        -webkit-text-fill-color: transparent;
     }
 
     .repeating-radial-gradient-example {
@@ -100,6 +107,8 @@
         background-image: repeating-radial-gradient(ellipse, rgb(255, 211, 92) 72%, rgb(255, 136, 0) 87%, rgb(245, 122, 41) 88%, rgb(249, 218, 134) 95%);
         background-size: 100% 100%;
         background-clip: text;
+        background-color: currentColor;
+        -webkit-text-fill-color: transparent;
     }
 
     .url-background-example {
@@ -107,6 +116,8 @@
         background-image: url("https://cdn.7tv.app/emote/66bfd747c66164d0fc0bc31e/1x.webp");
         background-size: 100% 100%;
         background-clip: text;
+        background-color: currentColor;
+        -webkit-text-fill-color: transparent;
     }
 
     .shadows-example {
@@ -115,6 +126,8 @@
         background-size: 100% 100%;
         background-clip: text;
         filter: drop-shadow(0px 0px 0.1px rgba(223, 129, 198, 1.000)) drop-shadow(1px 1px 0.1px rgba(112, 0, 103, 1.000));
+        background-color: currentColor;
+        -webkit-text-fill-color: transparent;
     }
 
     .shadows-using-rem-example {
@@ -123,10 +136,12 @@
         background-size: 100% 100%;
         background-clip: text;
         filter: drop-shadow(0rem 0rem 0.1rem rgba(223, 129, 198, 1.000)) drop-shadow(0.1rem 0.1rem 0.1rem rgba(112, 0, 103, 1.000));
+        background-color: currentColor;
+        -webkit-text-fill-color: transparent;
     }
 
     .example {
-        color: rgba(0, 0, 0, 0.000);
+        color: rgba(0, 0, 0, 1.000);
     }
 
     .paint-id {
