--- a/paints/paints.html
+++ b/paints/paints.html
@@ -66,6 +66,13 @@
     <span class="shadows-using-rem-example" style="font-size: 40px">Eggpire</span>
     <span class="paint-id">66bfcd890d8502f0629f9bc8</span>
 </span>
+<h3>
+    9 generating style with js
+</h3>
+<span class="example">
+    <span class="js-generated-example">forsen</span>
+</span>
+<script src="example.js"></script>
 </body>
 <style>
     .color-example {
@@ -75,7 +82,7 @@
     }
 
     .linear-gradient-example {
-        color: rgba(255, 100, 100, 0.000);
+        color: rgba(255, 100, 100, 1.000);
         background-image: linear-gradient(45deg, rgb(210, 210, 210) 10%, rgb(210, 210, 210) 20%, rgb(255, 100, 100) 20%, rgb(255, 100, 100) 30%);;
         background-size: 100% 100%;
         background-clip: text;
